1998-07-26  Laurent Pautet  <pautet@scapin.enst.fr>

	* isthrbio.adb: New source file used to detect whether we have a
	thread blocking io gnat rts. Use 'select' with timeout to do so.
	
	* s-ganobl.adb, s-gartcp.adb: Don't use with
	System.Garlic.TCP.Platform_Specific.Net anymore but
	System.Garlic.TCP.Operations instead. This new file is created at
	configuration time and decide to use a process blocking io mode or 
	the thread blocking io mode.

	* s-ganobl.adb : Create a new procedure Check to test if we can
 	send or receive a message on a socket. This encapsulate the use of
 	Poll or Select. Fix some problems on Linux using FSU threads.

	* Makefile.am, Makefile.in: Remove generation of s-gtplsp.ads as
	this is now done during configuration file. Add new object and
	source files: s-gatcop.ads s-gatcop.o.

	* 5sgtplsp.ads, 5wgtplsp.ads, 5wgtplsp.adb: Remove renaming of
 	System.Garlic.TCP.Platform_Specific.Net to System.Garlic.Thin as
 	this mode is now detected during configuration.

1998-07-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gafizi.adb: target_bytes should be initialized before
	executing Compress C function (because this variable is passed by
	address and its value is used - not only updated). Last step
	before full SGI port.

	* s-garrem.adb: Check whether host is "localhost". In this case,
 	do not use rsh but fork instead.

1998-07-22  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-rpc.adb: Use new soft link RPC_Shutdown.

	* s-gasoli.adb,s-gasoli.ads: Add two new soft links
	(Global_Termination and RPC_Shutdown).

	* s-garter.adb: Remove termination task and add a new soft link
 	Global_Termination. This procedure is executed at the end of the
	main subprogram by the main partition. This fixes a latent error
	(difficult to detect). Update the no activity test (because we
	have one less active task).
	
	* s-garhea.adb, s-garhea.ads: Remove Register_RPC_Shutdown and use
 	a new soft link from s-gasoli. Fix a problem that occurs in the